--- a/css/master.css
+++ b/css/master.css
@@ -24,9 +24,9 @@ img{
     margin:auto;
 }
 input{
-    padding: 2.5%;
+    padding: 4%;
     margin-top: 4%;
-    border-radius: 5%;
+    border-radius: 0.5em;
     border: solid 1px #ddd;
 }
 .form{
@@ -42,8 +42,8 @@ input{
   right: 10%;
 }
 #submit{
-    padding: 2.5%;
-    border-radius: 0;
+    padding: 4%;
+    border-radius: 0.2em;
     border: none;
     color: #fff;
     background-color: #4682B4;
