--- a/css/administrador.css
+++ b/css/administrador.css
@@ -29,7 +29,8 @@ li{
     width: 95px;
     height: 95px;
     left: 40%;
-    background-color: #fff;
+    background-image: url('../img/h10.png');
+    background-size: 95px;
     border-radius: 3em;
 }
 #menu-dash{
