--- a/css/administrador.css
+++ b/css/administrador.css
@@ -19,6 +19,19 @@ li{
 #float-left{
     background-color: #303030;
 }
+    #bottom{
+        position: relative;
+        bottom: 0;
+        text-align: center;
+    }
+    #bottom h4{
+        color: #fff;
+        font-weight: 100;
+    }
+    #bottom h4 a{
+        text-decoration: none;
+        color: #0D8AF2;
+    }
 #top-dash h1, h2{
     color: #fff;
     text-align: center;
